# Warehouser

./: .env  Cargo.toml  README.md  Warehouser.postman_collection.json  Warehouser.postman_environment.json  diesel.toml  glewis.postman_collection.json
migrations/2022-01-12-023247_inventory/: down.sql  up.sql
migrations/2022-01-13-081409_warehouses/: down.sql  up.sql
src/: api.rs  db.rs  main.rs  models.rs  schema.rs  service.rs  util.rs
