[package]
name = "warehouser"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "3", feature = ["logger"] }
diesel = { version = "1.4.4", features = ["postgres", "extras"] }
dotenv = "0.15.0"
serde = "1"
serde_json = "1"
diesel-enum = "0.0.5"
r2d2 = "0.8"
env_logger = "0.9"
